# Bidirectional-DSHOT-and-RPM-Filter

./: .gitignore  CMakeLists.txt  README.md  openocd.cfg
Src/: bdshot.c  bdshot.h  filters.c  filters.h  global_constants.h  global_variables.c  global_variables.h  main.c  setup.c  setup.h
link/: STM32F405RGTX_FLASH.ld  STM32F405RGTX_RAM.ld
